Ensure avatar visibility by adding border

--- a/src/styles/Avatar.module.scss
+++ b/src/styles/Avatar.module.scss
@@ -1,5 +1,5 @@
 .aviicon {
-    border-width: 3px;
+    border: 2px outset;
 }
 
 .aviicon-small {
